# DHC_Backend/apiModels/model__api_server_info_get_200_response.go
@@ -1,0 +1,17 @@
+/*
+ * 默认模块
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiModels
+
+type ApiServerInfoGet200Response struct {
+
+	Clients string `json:"Clients"`
+
+	MaxClients string `json:"MaxClients"`
+}
