# DHC_Backend/apiModels/model__api_server_info_get_request.go
@@ -1,0 +1,15 @@
+/*
+ * 默认模块
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiModels
+
+type ApiServerInfoGetRequest struct {
+
+	ServerHost string `json:"ServerHost"`
+}
