# DHC_Backend/apiModels/model_get_game_path_resp.go
@@ -1,0 +1,15 @@
+/*
+ * 默认模块
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiModels
+
+type GetGamePathResp struct {
+
+	GamePath string `json:"GamePath"`
+}
