# DHC_Backend/apiModels/model_get_server_info_req.go
@@ -1,0 +1,15 @@
+/*
+ * 默认模块
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiModels
+
+type GetServerInfoReq struct {
+
+	ServerHost string `json:"ServerHost"`
+}
