# DHC_Backend/apiModels/model_get_server_info_resp.go
@@ -7,8 +7,11 @@
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
-package models
+package apiModels
 
-type GamePathGet struct {
-	GamePath string `json:"GamePath"`
+type GetServerInfoResp struct {
+
+	Clients string `json:"Clients"`
+
+	MaxClients string `json:"MaxClients"`
 }
